<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav"
    app:startDestination="@+id/listFragment">

    <fragment
        android:id="@+id/favouriteFragment"
        android:name="com.example.travelguide.favourite.FavouriteFragment"
        android:label="@string/favourite"
        tools:layout="@layout/fragment_favourite"/>
    <fragment
        android:id="@+id/listFragment"
        android:name="com.example.travelguide.placesList.presentation.list.ListFragment"
        android:label="@string/list_fragment"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_listFragment_to_placeDetailsFragment"
            app:destination="@id/placeDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/myPlaceFragment"
        android:name="com.example.travelguide.profile.myPlace.MyPlaceFragment"
        android:label="@string/my_place"
        tools:layout="@layout/fragment_my_place" >

        <action
            android:id="@+id/action_myPlaceFragment_to_addPlaceFragment"
            app:destination="@id/addPlaceFragment" />
    </fragment>

    <fragment
        android:id="@+id/placeDetailsFragment"
        android:name="com.example.travelguide.placesList.presentation.details.PlaceDetailsFragment"
        android:label="@string/details_fragment"
        tools:layout="@layout/fragment_place_details" />
    <fragment
        android:id="@+id/addPlaceFragment"
        android:name="com.example.travelguide.profile.add.AddPlaceFragment"
        android:label="@string/add_fragment"
        tools:layout="@layout/fragment_add_place" />

</navigation>

